fix: layout change, spacing change, tabs

--- a/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_sidebar-and-main-panel.scss
@@ -82,6 +82,28 @@
   margin-top: 80px;
   border-radius: 5px;
 
+  /* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f10a;
+  border-radius: 4px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2dce889d;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #2dce88f1;
+}
+
   .sidebar-wrapper{
     min-height: 100%;
     max-height: calc(100vh - 705px);
